--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@
   font-size: 1.5rem;
   background: linear-gradient(to bottom, #000000, #310000, #570000, #820000, #a70e0e);
   text-align: center;
-  min-width: 100%;
+  max-width: 100%;
   height: fit-content;
   flex-wrap: wrap;
   position: relative;
@@ -114,14 +114,14 @@
 }
 
 .maincontent button {
-  transition: background 0.6s ease-in-out;
+  transition: background 0.3s ease-in;
   color: white; 
   border: none; 
   cursor: pointer;
   font-weight: normal;
   width: auto;
   padding: 10px 20px;
-  border-radius: 5px;
+  border-radius: 15px;
   font-size: 1rem;
   font-weight: normal;
   background: #333;
@@ -184,7 +184,7 @@
 }
 
 .maincontent button:hover {
-  background: linear-gradient(to right, #0059b8, #004084); 
+  background: linear-gradient(to right, #4db800, #078400); 
 }
 
 .banner {
@@ -205,4 +205,11 @@
   20%, 24%, 55% {
     text-shadow: none;
   }
+}
+
+footer img {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+
 }
