--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
 
 .title-card {
   position: relative;
-  height: 80vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -217,6 +217,7 @@ footer img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-image:linear-gradient(to bottom, black, grey, white, white) ;
 }
 
 .contact img {
@@ -243,4 +244,73 @@ footer img {
 .lang_btn button {
   padding: 5px 10px;
   cursor: pointer;
+}
+
+.facebook-feed {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: relative; 
+  overflow: hidden;
+  width: 100%;
+}
+
+.facebook-feed::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, black, rgb(52, 52, 52), white); 
+  z-index: 0; 
+}
+
+.facebook-feed::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('carbon.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1;
+  opacity: 0.5;
+}
+
+.facebook-feed .video-container {
+  flex: 1; /* Take up half of the container */
+  position: relative;
+}
+
+.facebook-feed video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  z-index: 2; 
+  opacity:0.2;
+}
+
+.facebook-feed .fb-page {
+  position: relative;
+  z-index: 3;
+}
+
+.fb-page {
+  flex:1;
+}
+
+.facebook-feed h1 {
+  position: relative;
+  z-index: 4; 
+  color: white; 
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+  background:linear-gradient(to right, transparent, black, transparent); 
+  padding: 10px; 
 }
