--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
+body, html {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  scroll-behavior: smooth;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 80vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-
+  display: flex;
+  transition: all 0.5s ease-in-out;
+  flex-direction: column;
+  min-height: 100vh;
+  height: auto;
+  overflow: visible;
 }
 
 .App-header {
@@ -87,11 +92,12 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 1.5rem;
   background: linear-gradient(to bottom, #000000, #310000, #570000, #820000, #a70e0e);
-  text-align: center;
-  max-width: 100%;
-  height: fit-content;
+  min-height: auto;
+  height: auto;
   flex-wrap: wrap;
   position: relative;
+  overflow: visible;
+  width: 100%; 
 }
 
 .maincontent::before {
@@ -102,7 +108,7 @@
   width: 100%;
   height: 100%;
   background: url('carbon.jpg') repeat;
-  opacity: 0.09; /* Adjust the opacity as needed */
+  opacity: 0.09; 
   z-index: 1;
 }
 
@@ -140,7 +146,9 @@
   min-width: 250px;
   background: linear-gradient(to bottom,rgb(19, 19, 19), #000000);
   border-radius: 8%;
-  height: fit-content;
+  box-sizing: border-box;
+  height: 100%;
+  overflow: visible;
   box-shadow: 0 4px 8px rgba(0,0,0,0.4);
 }
 
@@ -212,11 +220,33 @@ footer img {
 }
 
 .contact {
+  height: 100vh; 
+  width: 100vw;
   display: flex;
-  height: 100vh;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  background-image:linear-gradient(to bottom, black, grey, white, white) ;
+  background: linear-gradient(to bottom, black, transparent, white, transparent); /* Gradient background */
+  position: relative;
+}
+
+.contact::before {
+  content: ""; 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #059dc7;
+  opacity: 0.2; 
+  z-index: -1; 
+}
+
+.content {
+  z-index: 1; 
+  color: white;
+  text-align: center;
+  padding: 20px;
 }
 
 .contact img {
@@ -229,7 +259,14 @@ footer img {
 
 .contact p {
   font-size: 2rem;
+  font-family: 'Montserrat', sans-serif;
   color: black;
+}
+
+.contact h1 {
+  font-size: 4rem;
+  font-family: 'Montserrat', sans-serif;
+  color: white;
 }
 
 .lang_btn {
@@ -281,7 +318,7 @@ footer img {
 }
 
 .facebook-feed .video-container {
-  flex: 1; /* Take up half of the container */
+  flex: 1; 
   position: relative;
 }
 
@@ -315,18 +352,24 @@ footer img {
 }
 
 .background-layer {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; /* Ensures it spans across both pages */
+  height: 100%;
   max-width: 100%;
   max-height: 100%;
   background-image: url('./car.jpg');
   background-size: cover;
   background-position: center center;
-  z-index: -1; /* Keeps it behind the video and other content */
-  object-fit: cover; /* Ensures the image fills the space correctly */
+  z-index: -1; 
+  object-fit: cover; 
+  transition: background-image 5s ease-in;
+} 
+
+.page2-background {
+  transition: background-image 5s ease-in;
+  background-image: url('./slideshow/interior2.jpg');
 }
 
 #slideshow {
@@ -341,4 +384,20 @@ footer img {
 
 .background-layer video {
   opacity: 0.3;
+}
+
+@media (max-width: 1258px) {
+  .card p {
+    font-size: 1.1rem;
+  }
+  .card {
+  }
+}
+
+@media (max-width: 951px) {
+  .card p {
+    font-size: 1.1rem;
+  }
+  .card {
+  }
 }
